infer/tests/codetoanalyze/objc/errors/procdescs/MethodCall.h
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#import <Foundation/NSObject.h>

@interface MethodCall : NSObject

- (int)plusX :(int)x andY: (int)y;

@end
